--- a/rigorosum/rigorosum.html
+++ b/rigorosum/rigorosum.html
@@ -220,8 +220,8 @@
 							<h2>Static consolidation</h2>
 							<ul>
 								<li>No VM migrations</li>
-								<li>Overbooking is sometimes good</li>
 								<li>Robust against workload deviations</li>
+								<li>Overbooking is sometimes good</li>
 								<br/>
 								<li>Consolidate in batches</li>
 								<li>Vector packing</li>
@@ -232,7 +232,7 @@
 								<li>Good for unknown workload</li>
 								<li>Require buffer capacity</li>
 								<li>Migrations are bad</li>
-								<li>Time series forecasting reduces migrations</li>
+								<li>Proactive controllers are better</li>
 							</ul>
 						</div>
 						
