--- a/rigorosum/rigorosum.html
+++ b/rigorosum/rigorosum.html
@@ -7,7 +7,7 @@
 		<!------------------------------------------------>
 		<!-- Fill in presentation meta information here -->
 		<!------------------------------------------------>
-        <title>Efficient VM Allocation in Virtualized Data Centers</title>
+        <title>Energy efficient capacity management in virtualized data centers</title>
         <meta name="description" content="Dissertation Andreas Wolk">
         <meta name="author" content="Andreas Wolke">
 		<!------------------------------------------------>
@@ -102,7 +102,7 @@
 			<div class="slides">
 				<section>
 					<div style="padding-top:15em">
-						<h1>Efficient VM Allocation in Virtualized Data Centers</h1>
+						<h1>Energy efficient capacity management <br/> in virtualized data centers</h1>
 						<p>
 							<big>Andreas Wolke</big><br><br>
 						</p>
@@ -389,7 +389,7 @@
 	
 	<div class="tum-foot">
 			<ul id="nav">
-				<li style="width:300px">
+				<li style="width:370px">
 					<span>
 						<script type="text/javascript">
 							document.write(document.title);
